--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -64,7 +64,7 @@ i.fa-search{
 }
 
 
-.coin-list{
+.asset-list{
   margin: 30px 0 0 0;
   border-left: 1px solid #272635;
   list-style-type: none;
@@ -72,17 +72,17 @@ i.fa-search{
   max-height: 100%;
   overflow: auto;
 }
-.coin-list li{
+.asset-list li{
   color: #a7a7a7;
   transition: ease 0.3s;
   display: flex;
   align-items: center;
 }
-.coin-list li:hover{
+.asset-list li:hover{
   color:#272635;
   cursor:pointer
 }
-.coin-list li img{
+.asset-list li img{
   width: 20px;
   height: 20px;
   display: inline-block;
@@ -91,7 +91,7 @@ i.fa-search{
   vertical-align: middle;
   border: 1px solid red;
 }
-.coin-list li i{
+.asset-list li i{
   padding: 3px;
   border: 1px solid #a7a7a7;
   border-radius: 50%;
@@ -102,10 +102,10 @@ i.fa-search{
   font-size: 13px;
   margin-right: 10px;;
 }
-.coin-list li:hover i{
+.asset-list li:hover i{
   border: 1px solid #272635;
 }
-.coin-list li p{margin: 10px 0;}
+.asset-list li p{margin: 10px 0;}
 
 
 .content{
